# archive_inator_3000

./: .gitignore  Interests.json  README.md  Test.py  main.py  main_code.py  pyproject.toml  requirements.txt
docs/: LICENSE.md  README.md
modules/: GUI.py  data_fields.py  enums.py  functions.py  gui_elements.py
portable_archive_app/_creds_n_keys/: REMEMBER_CREDS.txt
portable_archive_app/app/: Archive Inator 3000.spec
src/: main.py
src/modules/: data_fields.py  enums.py  funcs_extract.py  funcs_http.py  gui_elements.py
src/modules/all_funcs/: __init__.py  funcs_extract.py  funcs_http.py  funcs_sheets_comm.py
src_code/: credentials.json  main.py
src_code/modules/: data_fields.py  enums.py  funcs_extract.py  funcs_http.py  funcs_sheets_comm.py  functions.py  gui_elements.py
